2002-01-30  Seth Nickell  <snickell@stanford.edu>

	* configure.in:

	Bump version number to 1.0.2.
	
2002-01-30  Seth Nickell  <snickell@stanford.edu>

	* gnome-vfs.keys.in:

	Update "GNOME application launcher" to
	"application launcher", since KDE uses .desktop files
	too.

2002-01-27  Anders Carlsson  <andersca@gnu.org>

	* icons/gnome-application-x-gnome-app-info.png: 
	Update icon.

2002-01-27  Seth Nickell  <snickell@stanford.edu>

	* gnome-vfs-mime-magic:

	Remove magic for "detecting" C source code, because it
	often misfires and I can't think of a situation where
	source code isn't properly identified by extension
	anyway.

2002-01-22  jacob berkman  <jacob@ximian.com>

	* configure.in (AC_OUTPUT):
	* Makefile.am (SUBDIRS): move man page from gnome-vfs here

2002-01-21  Seth Nickell  <snickell@stanford.edu>

	* icons/gnome-application-x-gnumeric.png:
	* icons/gnome-video-mpeg.png:

	Updated icons.

2002-01-21  Seth Nickell  <snickell@stanford.edu>

	* check-mime.pl:

	Update to look for icons in ./icons.
	
	* gnome-vfs.keys.in:

	Change a few weird icon_filename entries.
	
	* icons/Makefile.am:
	* icons/gnome-application-x-generic-spreadsheet.png:
	* icons/gnome-application-x-gnumeric.png:
	* icons/i-cdrom-192.png:
	* icons/i-fifo.png:
	* icons/i-harddisk-72.png:
	* icons/i-manual.png:
	* icons/i-music-12.png:
	* icons/i-music-24.png:
	* icons/i-music-36.png:
	* icons/i-nfs.png:
	* icons/i-sock.png:
	* icons/i-spreadsheet.png:

	Move more icons out of Nautilus.

2002-01-21  Seth Nickell  <snickell@stanford.edu>

	* Makefile.am:
	* configure.in:
	* gnome-vfs.keys.in:
	* icons/.cvsignore:
	* icons/Makefile.am:
	* icons/gnome-application-encapsulated_postscript.png:
	* icons/gnome-application-msword.png:
	* icons/gnome-application-pdf.png:
	* icons/gnome-application-pgp.png:
	* icons/gnome-application-postscript.png:
	* icons/gnome-application-qif.png:
	* icons/gnome-application-rtf.png:
	* icons/gnome-application-smil.png: