@@ -1,3 +1,7 @@
+2002-01-31  Bradford Hovinen  <hovinen@ximian.com>
+
+	* gnome-vfs.keys.in: Added category, use_category_default fields
+
 2002-01-30  Seth Nickell  <snickell@stanford.edu>
 
 	* configure.in:
